--- a/plan-details.html
+++ b/plan-details.html
@@ -300,6 +300,7 @@
           </ul>
           <button class="cta-btn">SELECT</button>
         </div>
+        
         <div class="pricing-card standard">
           <div class="heading">
             <h4>STANDARD</h4>
@@ -395,7 +396,346 @@
           <button class="cta-btn">SELECT</button>
         </div>
       </section>
-    </section><!-- /Gallery Details Section -->
+    </section>
+    <!-- /Gallery Details Section -->
+
+
+    <section id="gallery-details" class="gallery-details section">
+      <section class="pricing-plans">
+        <div class="pricing-card basic">
+          <div class="heading">
+            <h4>Starter Plan</h4>
+            <p>for small business</p>
+          </div>
+          <p class="price">
+             ₹5,000
+            <sub>/month</sub>
+          </p>
+          <ul class="features">
+            <li>
+              <i class="fa fa-check" aria-hidden="true"></i>
+              <i class="fa-solid fa-check"></i>
+              <strong> </i> Social Media  Management </strong>
+              <br>
+              <ul class="features">
+                <li style="padding-top:10px">
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  <i class="fa-solid fa-check"></i>
+                  <strong> </i> Platforms: </strong>  Facebook, Instagram
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  <i class="fa-solid fa-check"></i>
+                  <strong> </i> Frequency:  </strong> 6 posts/month
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  <i class="fa-solid fa-check"></i>
+                  <strong> </i> Content Type </strong> Mixed content (images, videos, infographics, carousels)
+                </li>
+              </ul>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Content Focus</strong> Engagement
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>SEO</strong>
+              <ul class="features">
+              <li style="padding-top:10px">
+                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa-solid fa-check"></i>
+                <strong> </i> Keyword Research: </strong>   10 relevant keywords
+              </li>
+              <li>
+                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa-solid fa-check"></i>
+                <strong> </i>Basic On-Page SEO</strong>   Optimize 5 pages (title tags, meta descriptions, headers, and keyword integration) 
+              </li>
+            </li>
+            <ul>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Reporting</strong> Monthly Analytics Report (basic)
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Value Proposition</strong> Minimal investment, brand awareness
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>KPIs</strong> Social media engagement rate, follower growth, keyword rankings, organic traffic growth   
+            </li>
+          </ul>
+          <button class="cta-btn">SELECT</button>
+        </div>
+        <div class="pricing-card standard">
+          <div class="heading">
+            <h4>STANDARD</h4>
+            <p>for medium-sized businesses</p>
+          </div>
+          <p class="price">
+            $5
+            <sub>/month</sub>
+          </p>
+          <ul class="features">
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited</strong> domain name
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>50 GB</strong> of disk space
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>500GB </strong>of bandwidth
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>10 MySQL</strong> database
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>50 email</strong> accounts
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>cPanel</strong> control panel
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Free SSL</strong> certificate
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>24/7</strong> support
+            </li>
+          </ul>
+          <button class="cta-btn">SELECT</button>
+        </div>
+        <div class="pricing-card premium">
+          <div class="heading">
+            <h4>PREMIUM</h4>
+            <p>for small businesses</p>
+          </div>
+          <p class="price">
+            $10
+            <sub>/month</sub>
+          </p>
+          <ul class="features">
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited</strong> domain name
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>100 GB</strong> of disk space
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>1TB </strong>of bandwidth
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited MySQL</strong> database
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited email</strong> accounts
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>cPanel</strong> control panel
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Free SSL</strong> certificate
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>24/7 priority</strong> support
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Advanced</strong> security features
+            </li>
+          </ul>
+          <button class="cta-btn">SELECT</button>
+        </div>
+      </section>
+    </section>
+
+
+
+
+    <section id="gallery-details" class="gallery-details section">
+      <section class="pricing-plans">
+        <div class="pricing-card basic">
+          <div class="heading">
+            <h4>Starter Plan</h4>
+            <p>for small business</p>
+          </div>
+          <p class="price">
+             ₹5,000
+            <sub>/month</sub>
+          </p>
+          <ul class="features">
+            <li>
+              <i class="fa fa-check" aria-hidden="true"></i>
+              <i class="fa-solid fa-check"></i>
+              <strong> </i> Social Media  Management </strong>
+              <br>
+              <ul class="features">
+                <li style="padding-top:10px">
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  <i class="fa-solid fa-check"></i>
+                  <strong> </i> Platforms: </strong>  Facebook, Instagram
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  <i class="fa-solid fa-check"></i>
+                  <strong> </i> Frequency:  </strong> 6 posts/month
+                </li>
+                <li>
+                  <i class="fa fa-check" aria-hidden="true"></i>
+                  <i class="fa-solid fa-check"></i>
+                  <strong> </i> Content Type </strong> Mixed content (images, videos, infographics, carousels)
+                </li>
+              </ul>
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Content Focus</strong> Engagement
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>SEO</strong>
+              <ul class="features">
+              <li style="padding-top:10px">
+                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa-solid fa-check"></i>
+                <strong> </i> Keyword Research: </strong>   10 relevant keywords
+              </li>
+              <li>
+                <i class="fa fa-check" aria-hidden="true"></i>
+                <i class="fa-solid fa-check"></i>
+                <strong> </i>Basic On-Page SEO</strong>   Optimize 5 pages (title tags, meta descriptions, headers, and keyword integration) 
+              </li>
+            </li>
+            <ul>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Reporting</strong> Monthly Analytics Report (basic)
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Value Proposition</strong> Minimal investment, brand awareness
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>KPIs</strong> Social media engagement rate, follower growth, keyword rankings, organic traffic growth   
+            </li>
+          </ul>
+          <button class="cta-btn">SELECT</button>
+        </div>
+        <div class="pricing-card standard">
+          <div class="heading">
+            <h4>STANDARD</h4>
+            <p>for medium-sized businesses</p>
+          </div>
+          <p class="price">
+            $5
+            <sub>/month</sub>
+          </p>
+          <ul class="features">
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited</strong> domain name
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>50 GB</strong> of disk space
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>500GB </strong>of bandwidth
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>10 MySQL</strong> database
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>50 email</strong> accounts
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>cPanel</strong> control panel
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Free SSL</strong> certificate
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>24/7</strong> support
+            </li>
+          </ul>
+          <button class="cta-btn">SELECT</button>
+        </div>
+        <div class="pricing-card premium">
+          <div class="heading">
+            <h4>PREMIUM</h4>
+            <p>for small businesses</p>
+          </div>
+          <p class="price">
+            $10
+            <sub>/month</sub>
+          </p>
+          <ul class="features">
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited</strong> domain name
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>100 GB</strong> of disk space
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>1TB </strong>of bandwidth
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited MySQL</strong> database
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Unlimited email</strong> accounts
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>cPanel</strong> control panel
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Free SSL</strong> certificate
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>24/7 priority</strong> support
+            </li>
+            <li>
+              <i class="fa-solid fa-check"></i>
+              <strong>Advanced</strong> security features
+            </li>
+          </ul>
+          <button class="cta-btn">SELECT</button>
+        </div>
+      </section>
+    </section>
 
   </main>
 
