--- a/index.html
+++ b/index.html
@@ -4,13 +4,55 @@
 <head>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <title>Index - PhotoFolio Bootstrap Template</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  <title>Digital Marketing Company in Kochi, ernakulam, Kerala | your digital marketing partner - bumblebee media</title>
 
-  <!-- Favicons -->
-  <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  
+
+  <meta name="description" content="Looking for the best and affordable digital marketing company in Kerala, Kochi? Bumble Bee offers SEO, social media campaigns, content marketing, and more to drive better traffic, leads, and conversions.">
+  <meta name="keywords" content="digital marketing Kerala, digital marketing company Kerala, best digital marketing agency Kerala, social media marketing Kerala, affordable digital marketing Kerala">
+  <meta name="author" content="Bumble Bee">
+
+  <!-- Open Graph Meta Tags for Social Media -->
+    <!-- Open Graph Meta Tags for Social Media -->
+    <meta property="og:title" content="Best and Affordable Digital Marketing Company in Kerala - Bumble Bee">
+    <meta property="og:description" content="Looking for the best and affordable digital marketing company in Kerala, Kochi? Bumble Bee offers SEO, social media campaigns, content marketing, and more to drive better traffic, leads, and conversions.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.bumblebeemedia.in">
+    <meta property="og:image" content="https://www.bumblebeemedia.in/images/og-image.jpg">
+
+    <!-- Twitter Card Data -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:site" content="@bumblebee">
+    <meta name="twitter:title" content="Best and Affordable Digital Marketing Company in Kerala - Bumble Bee">
+    <meta name="twitter:description" content="Looking for the best and affordable digital marketing company in Kerala, Kochi? Bumble Bee offers SEO, social media campaigns, content marketing, and more to drive better traffic, leads, and conversions.">
+    <meta name="twitter:image" content="https://www.bumblebee.com/images/twitter-image.jpg">
+
+    <!-- Canonical Link -->
+    <link rel="canonical" href="https://www.bumblebeemedia.in">
+
+    <!-- Schema.org Structured Data -->
+    <script type="application/ld+json">
+    {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Bumble Bee",
+        "url": "https://www.bumblebeemedia.in",
+        "logo": "https://www.bumblebee.com/images/logo.png",
+        "contactPoint": {
+            "@type": "ContactPoint",
+            "telephone": "+1-800-555-5555",
+            "contactType": "Customer Service"
+        },
+        "sameAs": [
+            "https://www.facebook.com/bumblebee",
+            "https://www.twitter.com/bumblebee",
+            "https://www.linkedin.com/company/bumblebee"
+        ]
+    }
+    </script>
+
+    <!-- Favicon -->
+    <link rel="icon" href="https://www.bumblebee.com/favicon.ico" type="image/x-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -499,7 +541,7 @@
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-
+  <script>window.$zoho=window.$zoho || {};$zoho.salesiq=$zoho.salesiq||{ready:function(){}}</script><script id="zsiqscript" src="https://salesiq.zohopublic.in/widget?wc=siqe32c3bf26b6ea53b050da25c411b31bdc50c31d08fafad0876f0023bbf34f9a5" defer></script>
   <!-- Main JS File -->
   <script src="assets/js/main.js"></script>
 
