--- a/index.html
+++ b/index.html
@@ -68,7 +68,14 @@
 
   <!-- Main CSS File -->
   <link href="assets/css/main.css" rel="stylesheet">
-
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZV2LBZD32Q"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+  
+    gtag('config', 'G-ZV2LBZD32Q');
+  </script>
   <!-- =======================================================
   * Template Name: PhotoFolio
   * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
