--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <meta property="og:description" content="Looking for the best and affordable digital marketing company in Kerala, Kochi? Bumble Bee offers SEO, social media campaigns, content marketing, and more to drive better traffic, leads, and conversions.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.bumblebeemedia.in">
-    <meta property="og:image" content="https://www.bumblebeemedia.in/images/og-image.jpg">
+    <meta property="og:image" content="assets/img/og-image.gif">
 
     <!-- Twitter Card Data -->
     <meta name="twitter:card" content="summary_large_image">
@@ -29,6 +29,22 @@
 
     <!-- Canonical Link -->
     <link rel="canonical" href="https://www.bumblebeemedia.in">
+    <link href="assets/css/main.css" rel="stylesheet">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZV2LBZD32Q"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-ZV2LBZD32Q');
+    </script>
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "msomjlwixr");
+  </script>
 
     <!-- Schema.org Structured Data -->
     <script type="application/ld+json">
@@ -67,15 +83,7 @@
   <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
 
   <!-- Main CSS File -->
-  <link href="assets/css/main.css" rel="stylesheet">
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-ZV2LBZD32Q"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-  
-    gtag('config', 'G-ZV2LBZD32Q');
-  </script>
+
   <!-- =======================================================
   * Template Name: PhotoFolio
   * Template URL: https://bootstrapmade.com/photofolio-bootstrap-photography-website-template/
