--- a/about.html
+++ b/about.html
@@ -106,8 +106,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
-        <h1 class="sitename">PhotoFolio</h1>
+        <img src="assets/img/logo-d.png" style=" height:200px; " alt="Bumble Bee Logo" id="logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
@@ -206,7 +205,7 @@
 
         <div class="row gy-4 justify-content-center">
           <div class="col-lg-4">
-            <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
+            <img src="assets/img/bumble-bee.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-5 content">
             <h2>Who are we ? What Inspires us ? How is our plan so affordable ? </h2>
