--- a/index.html
+++ b/index.html
@@ -190,8 +190,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <i class="bi bi-camera"></i>
-        <h1 class="sitename">Bumble bee</h1>
+        <img src="assets/img/logo-d.png" style=" height:200px; " alt="Bumble Bee Logo" id="logo">
       </a>
 
       <nav id="navmenu" class="navmenu">
