--- a/plan-details.html
+++ b/plan-details.html
@@ -230,15 +230,11 @@
       <div
         class="container-fluid position-relative d-flex align-items-center justify-content-between"
       >
-        <a
-          href="index.html"
-          class="logo d-flex align-items-center me-auto me-xl-0"
-        >
-          <!-- Uncomment the line below if you also wish to use an image logo -->
-          <!-- <img src="assets/img/logo.png" alt=""> -->
-          <i class="bi bi-camera"></i>
-          <h1 class="sitename">PhotoFolio</h1>
-        </a>
+      <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
+        <!-- Uncomment the line below if you also wish to use an image logo -->
+        <!-- <img src="assets/img/logo.png" alt=""> -->
+        <img src="assets/img/logo-d.png" style=" height:200px; " alt="Bumble Bee Logo" id="logo">
+      </a>
 
         <nav id="navmenu" class="navmenu">
           <ul>
