--- a/plan-details.html
+++ b/plan-details.html
@@ -233,7 +233,7 @@
       <a href="index.html" class="logo d-flex align-items-center me-auto me-xl-0">
         <!-- Uncomment the line below if you also wish to use an image logo -->
         <!-- <img src="assets/img/logo.png" alt=""> -->
-        <img src="assets/img/logo-d.png" style=" height:200px; " alt="Bumble Bee Logo" id="logo">
+        <img src="assets/img/logo-d.png"  alt="Bumble Bee Logo" id="logo">
       </a>
 
         <nav id="navmenu" class="navmenu">
