--- a/plan-details.html
+++ b/plan-details.html
@@ -357,7 +357,7 @@
                   <li>
                     <i class="fa fa-check" aria-hidden="true"></i>
                     <i class="fa-solid fa-check"></i>
-                    <strong> Content Type </strong> Local events/promotios
+                    <strong> Content Type </strong> Local events/promotions
                   </li>
                 </ul>
               </li>
