--- a/services.html
+++ b/services.html
@@ -106,6 +106,7 @@
           <li><a href="index.html">Home<br></a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="plan-details.html">plans & pricing</a></li>
+          <li ><a href="projects.html" class="active"><span>Projects</span> </a>
           <li><a href="services.html" class="active">Services</a></li>
           <!-- {% comment %} <li class="dropdown"><a href="gallery.html"><span>Gallery</span> <i class="bi bi-chevron-down toggle-dropdown"></i></a>
             <ul>
