added projects page

--- a/vista-gents-hostel-bumble-bee-digital-marketing-kochi.html
+++ b/vista-gents-hostel-bumble-bee-digital-marketing-kochi.html
@@ -382,7 +382,7 @@ gtag('config', 'G-ZV2LBZD32Q');
                 <ul class="b">
                   <li><b>Client Name:</b> Vista Gents Hostel Palarivattom</li>
                   <li><b>Location:</b> Palarivattom, Kerala</li>
-                  <li><b>Industry:</b>Stay And Accomodatiohn</li>
+                  <li><b>Industry:</b>Stay And Accomodation</li>
                   <li><b>Client Name:</b> Sidiq</li>
                   <li><b>Package:</b> ₹5,000/month</li>
                 </ul>
